<resources>
    <string name="app_name">ProteinTracker</string>
    <string name="test_untuk_update_view">Test untuk update view</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="protein_app">Protein App</string>
    <string name="fragment">Fragment</string>
    <string name="button">Button</string>
    <string name="help">Help</string>
    <string name="layout">Layout</string>


</resources>
